--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,6 +14,13 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      - name: Build and test docker-compose
+      - name: Install Docker Compose plugin
         run: |
-          docker-compose build
+          sudo apt-get update
+          sudo apt-get install -y docker-compose-plugin
+
+      - name: Build and test docker compose
+        run: |
+
+          docker compose build
+          docker compose push
