--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -43,7 +43,7 @@ jobs:
           context: ./backend
           file: ./backend/Dockerfile
           push: true
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/student-control-backend:latest
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/hands-practice-backend:latest
 
       # ⚛️ 프론트엔드 이미지 빌드 및 푸시
       - name: Build and push frontend image
@@ -52,7 +52,7 @@ jobs:
           context: ./frontend
           file: ./frontend/Dockerfile
           push: true
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/student-control-frontend:latest
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/hands-practice-frontend:latest
 
   deploy:
     runs-on: ubuntu-latest
@@ -66,8 +66,35 @@ jobs:
           username: ${{ secrets.EC2_USER }}
           key: ${{ secrets.EC2_PRIVATE_KEY }}
           script: |
-            cd /home/ubuntu/student-control
-            docker pull ${{ secrets.DOCKERHUB_USERNAME }}/student-control-backend:latest
-            docker pull ${{ secrets.DOCKERHUB_USERNAME }}/student-control-frontend:latest
-            docker-compose down
+            # 프로젝트 폴더 확인 (없으면 생성)
+            mkdir -p /home/ubuntu/hands-practice
+            cd /home/ubuntu/hands-practice
+
+            # 최신 이미지 가져오기
+            docker pull ${{ secrets.DOCKERHUB_USERNAME }}/hands-practice-backend:latest
+            docker pull ${{ secrets.DOCKERHUB_USERNAME }}/hands-practice-frontend:latest
+
+            # docker-compose.yml 자동 생성
+            cat << 'EOF' > docker-compose.yml
+            version: "3"
+            services:
+              backend:
+                image: ${{ secrets.DOCKERHUB_USERNAME }}/hands-practice-backend:latest
+                container_name: backend
+                restart: always
+                ports:
+                  - "8000:8000"
+
+              frontend:
+                image: ${{ secrets.DOCKERHUB_USERNAME }}/hands-practice-frontend:latest
+                container_name: frontend
+                restart: always
+                ports:
+                  - "3000:3000"
+                depends_on:
+                  - backend
+            EOF
+
+            # 기존 컨테이너 중지 및 재배포
+            docker-compose down || true
             docker-compose up -d
